--- a/game-app/src/index.html
+++ b/game-app/src/index.html
@@ -10,7 +10,8 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" 
       integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" 
       crossorigin="anonymous">
-    
+<!--Adding  Effects-->
+<link rel="stylesheet" href="assets/forms.css">    
 
 </head>
 <body>
